--- a/config/eyelash_corne.conf
+++ b/config/eyelash_corne.conf
@@ -27,6 +27,9 @@ CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 # Uncomment the following line if keycodes labeled "consumer" like C_AC_SEARCH don't work
 #CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+
 #EC11 enable
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
