--- a/config/west.yml
+++ b/config/west.yml
@@ -6,19 +6,18 @@ manifest:
       # See:
       # - https://zmk.dev/docs/features/modules
       # - https://docs.zephyrproject.org/3.5.0/develop/west/manifest.html#projects
-    - name: m165437 #new entry
-      url-base: https://github.com/M165437 #new entry
+    - name: mctechnology17
+      url-base: https://github.com/mctechnology17
   projects:
     - name: eyelash_corne
       url: https://github.com/a741725193/zmk-new_corne
       revision: main
-    - name: nice-view-gem #new entry
-      remote: m165437 #new entry
-      revision: main #new entry
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
-
+    - name: zmk-nice-oled
+      remote: mctechnology17
+      revision: main
   self:
     path: config
